<resources>
    <string name="app_name">Implicit Intents Assignment</string>
    <string name="action_share">Share</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>
    <string name="action_email">Email</string>
    <string name="action_phoneCall">Phone</string>
    <string name="action_map">Map</string>
</resources>
