<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yeminnaing.implicitintentsassignment.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_share_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_share"
            android:textColor="@color/text_black_ish"
            />

        <TextView
            android:id="@+id/tv_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_map_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_map"
            android:textColor="@color/text_black_ish"
            />

        <TextView
            android:id="@+id/tv_phone_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_phoneCall"
            android:textColor="@color/text_black_ish"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_email"
            android:textColor="@color/text_black_ish"
            />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_camera"
            android:textColor="@color/text_black_ish"
            />

        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_photo_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_gallery"
            android:textColor="@color/text_black_ish"
            />

        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_gradient_black_24dp"
            android:drawableTint="@color/text_black_ish"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            android:text="@string/action_calendar"
            android:textColor="@color/text_black_ish"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
